:hammer: Remove complicated layer(userSchemaController only for schema represent)
