# public/swagger.json
@@ -153,7 +153,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserCreateAccessToken"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/UserCreateAccessToken"
+                    },
+                    {}
+                  ]
                 }
               }
             }
@@ -181,10 +186,15 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/UserDetail"
-                  },
-                  "type": "array"
+                  "anyOf": [
+                    {
+                      "items": {
+                        "$ref": "#/components/schemas/UserDetail"
+                      },
+                      "type": "array"
+                    },
+                    {}
+                  ]
                 }
               }
             }
@@ -204,7 +214,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserDetail"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/UserDetail"
+                    },
+                    {}
+                  ]
                 }
               }
             }
@@ -231,7 +246,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserDetail"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/UserDetail"
+                    },
+                    {}
+                  ]
                 }
               }
             }
@@ -268,7 +288,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/NoContent"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/NoContent"
+                    },
+                    {}
+                  ]
                 }
               }
             }
@@ -297,7 +322,12 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserDetail"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/UserDetail"
+                    },
+                    {}
+                  ]
                 }
               }
             }
